--- a/public/Nitrocid.Addons.Essentials/Nitrocid.Extras.Mods/Resources/Languages/arb-T.json
+++ b/public/Nitrocid.Addons.Essentials/Nitrocid.Extras.Mods/Resources/Languages/arb-T.json
@@ -415,6 +415,30 @@
     {
       "loc": "NKS_MODS_SETTINGS_DESC",
       "text": "يتيح لك هذا القسم تكوين كيفية عمل نظام تعديل النواة."
+    },
+    {
+      "loc": "NKS_MODS_TUI_HELP01_TITLE",
+      "text": "إدارة التعديلات"
+    },
+    {
+      "loc": "NKS_MODS_TUI_HELP01_DESC",
+      "text": "واجهة مستخدم تفاعلية لإدارة التعديلات"
+    },
+    {
+      "loc": "NKS_MODS_TUI_HELP01_BODY",
+      "text": "يمكنك بسهولة إدارة تعديلات نواة جهازك المثبتة باستخدام هذه الواجهة التفاعلية. يمكنك رؤية التعديلات التي تعمل على نواة جهازك، بالإضافة إلى تشغيلها وإيقافها."
+    },
+    {
+      "loc": "NKS_MODS_MANTUI_HELP01_TITLE",
+      "text": "عرض صفحات الدليل"
+    },
+    {
+      "loc": "NKS_MODS_MANTUI_HELP01_DESC",
+      "text": "واجهة مستخدم تفاعلية لعرض صفحات الدليل"
+    },
+    {
+      "loc": "NKS_MODS_MANTUI_HELP01_BODY",
+      "text": "قد تأتي صفحات الدليل مرفقة مع تعديلاتك، في حال كانت توفر لك مساعدة إضافية، كل ذلك في مكان واحد. يمكنك استخدام هذه الواجهة التفاعلية لعرض صفحات الدليل بشكل أكثر تفاعلية."
     }
   ]
 }
