--- a/public/Nitrocid.Addons.Essentials/Nitrocid.Extras.Mods/Resources/Languages/grk.json
+++ b/public/Nitrocid.Addons.Essentials/Nitrocid.Extras.Mods/Resources/Languages/grk.json
@@ -390,6 +390,30 @@
     {
       "loc": "NKS_MODS_SETTINGS_DESC",
       "text": "Αυτή η ενότητα σάς επιτρέπει να διαμορφώσετε τον τρόπο λειτουργίας του συστήματος τροποποίησης πυρήνα."
+    },
+    {
+      "loc": "NKS_MODS_TUI_HELP01_TITLE",
+      "text": "Διαχείριση mods"
+    },
+    {
+      "loc": "NKS_MODS_TUI_HELP01_DESC",
+      "text": "Διαδραστικό TUI για διαχείριση mods"
+    },
+    {
+      "loc": "NKS_MODS_TUI_HELP01_BODY",
+      "text": "Μπορείτε εύκολα να διαχειριστείτε τα εγκατεστημένα mods του πυρήνα σας χρησιμοποιώντας αυτό το διαδραστικό TUI. Μπορείτε να δείτε ποια mods εκτελούνται στον πυρήνα σας, καθώς και να ξεκινήσετε και να σταματήσετε mods."
+    },
+    {
+      "loc": "NKS_MODS_MANTUI_HELP01_TITLE",
+      "text": "Προβολή σελίδων εγχειριδίου"
+    },
+    {
+      "loc": "NKS_MODS_MANTUI_HELP01_DESC",
+      "text": "Διαδραστικό TUI για προβολή σελίδας χειροκίνητου"
+    },
+    {
+      "loc": "NKS_MODS_MANTUI_HELP01_BODY",
+      "text": "Οι σελίδες εγχειριδίου ενδέχεται να συνοδεύουν τα mods σας, σε περίπτωση που σας παρέχουν επιπλέον βοήθεια, όλα σε ένα μέρος. Μπορείτε να χρησιμοποιήσετε αυτό το διαδραστικό TUI για να δείτε τις σελίδες εγχειριδίου πιο διαδραστικά."
     }
   ]
 }
