--- a/public/Nitrocid.Addons.Essentials/Nitrocid.Extras.Mods/Resources/Languages/ind-T.json
+++ b/public/Nitrocid.Addons.Essentials/Nitrocid.Extras.Mods/Resources/Languages/ind-T.json
@@ -389,6 +389,30 @@
     {
       "loc": "NKS_MODS_SETTINGS_DESC",
       "text": "यह अनुभाग आपको कर्नेल संशोधन प्रणाली के कार्य करने के तरीके को कॉन्फ़िगर करने देता है।"
+    },
+    {
+      "loc": "NKS_MODS_TUI_HELP01_TITLE",
+      "text": "मॉड मैनेज करना"
+    },
+    {
+      "loc": "NKS_MODS_TUI_HELP01_DESC",
+      "text": "मॉड मैनेजमेंट के लिए इंटरैक्टिव TUI"
+    },
+    {
+      "loc": "NKS_MODS_TUI_HELP01_BODY",
+      "text": "आप इस इंटरैक्टिव TUI का इस्तेमाल करके अपने इंस्टॉल किए गए कर्नेल मॉड को आसानी से मैनेज कर सकते हैं। आप देख सकते हैं कि आपके कर्नेल पर कौन से मॉड चल रहे हैं, साथ ही मॉड को शुरू और बंद भी कर सकते हैं।"
+    },
+    {
+      "loc": "NKS_MODS_MANTUI_HELP01_TITLE",
+      "text": "मैन्युअल पेज देखना"
+    },
+    {
+      "loc": "NKS_MODS_MANTUI_HELP01_DESC",
+      "text": "मैन्युअल पेज देखने के लिए इंटरैक्टिव TUI"
+    },
+    {
+      "loc": "NKS_MODS_MANTUI_HELP01_BODY",
+      "text": "मैन्युअल पेज आपके मॉड के साथ आ सकते हैं, अगर वे आपको और मदद देते हैं, तो सब एक ही जगह पर। आप इस इंटरैक्टिव TUI का इस्तेमाल करके मैनुअल पेज को ज़्यादा इंटरैक्टिव तरीके से देख सकते हैं।"
     }
   ]
 }
