--- a/public/Nitrocid.Addons.Essentials/Nitrocid.Extras.Mods/Resources/Languages/ukr.json
+++ b/public/Nitrocid.Addons.Essentials/Nitrocid.Extras.Mods/Resources/Languages/ukr.json
@@ -389,6 +389,30 @@
     {
       "loc": "NKS_MODS_SETTINGS_DESC",
       "text": "У цьому розділі можна налаштувати, як працює система модифікації ядра."
+    },
+    {
+      "loc": "NKS_MODS_TUI_HELP01_TITLE",
+      "text": "Керування модами"
+    },
+    {
+      "loc": "NKS_MODS_TUI_HELP01_DESC",
+      "text": "Інтерактивний TUI для керування модами"
+    },
+    {
+      "loc": "NKS_MODS_TUI_HELP01_BODY",
+      "text": "Ви можете легко керувати встановленими модами ядра за допомогою цього інтерактивного TUI. Ви можете бачити, які моди працюють на вашому ядрі, а також запускати та зупиняти моди."
+    },
+    {
+      "loc": "NKS_MODS_MANTUI_HELP01_TITLE",
+      "text": "Перегляд сторінок посібника"
+    },
+    {
+      "loc": "NKS_MODS_MANTUI_HELP01_DESC",
+      "text": "Інтерактивний TUI для перегляду сторінок посібника"
+    },
+    {
+      "loc": "NKS_MODS_MANTUI_HELP01_BODY",
+      "text": "Сторінки посібника можуть постачатися разом з вашими модами, якщо вони надають вам додаткову допомогу, все в одному місці. Ви можете використовувати цей інтерактивний TUI для більш інтерактивного перегляду сторінок посібника."
     }
   ]
 }
