--- a/public/Nitrocid.Addons.Essentials/Nitrocid.Extras.Mods/Resources/Languages/Output/Localizations.es.resx
+++ b/public/Nitrocid.Addons.Essentials/Nitrocid.Extras.Mods/Resources/Languages/Output/Localizations.es.resx
@@ -405,5 +405,23 @@
   <data name="NKS_MODS_SETTINGS_DESC" xml:space="preserve">
     <value>Esta sección le permite configurar cómo funciona el sistema de modificación del kernel.</value>
   </data>
+  <data name="NKS_MODS_TUI_HELP01_TITLE" xml:space="preserve">
+    <value>Gestión de mods</value>
+  </data>
+  <data name="NKS_MODS_TUI_HELP01_DESC" xml:space="preserve">
+    <value>UI interactiva para la gestión de mods</value>
+  </data>
+  <data name="NKS_MODS_TUI_HELP01_BODY" xml:space="preserve">
+    <value>Puedes gestionar fácilmente los mods de tu kernel instalados con esta UI interactiva. Puedes ver qué mods se están ejecutando en tu kernel, así como iniciarlos y detenerlos.</value>
+  </data>
+  <data name="NKS_MODS_MANTUI_HELP01_TITLE" xml:space="preserve">
+    <value>Visualización de páginas del manual</value>
+  </data>
+  <data name="NKS_MODS_MANTUI_HELP01_DESC" xml:space="preserve">
+    <value>UI interactiva para el visor de páginas del manual</value>
+  </data>
+  <data name="NKS_MODS_MANTUI_HELP01_BODY" xml:space="preserve">
+    <value>Las páginas del manual pueden venir incluidas con tus mods, por si te ofrecen ayuda adicional, todo en un solo lugar. Puedes usar esta UI interactiva para ver las páginas del manual de forma más interactiva.</value>
+  </data>
 
 </root>
