--- a/public/Nitrocid.Addons.Essentials/Nitrocid.Extras.Mods/Resources/Languages/Output/Localizations.hi.resx
+++ b/public/Nitrocid.Addons.Essentials/Nitrocid.Extras.Mods/Resources/Languages/Output/Localizations.hi.resx
@@ -405,5 +405,23 @@
   <data name="NKS_MODS_SETTINGS_DESC" xml:space="preserve">
     <value>यह अनुभाग आपको कर्नेल संशोधन प्रणाली के कार्य करने के तरीके को कॉन्फ़िगर करने देता है।</value>
   </data>
+  <data name="NKS_MODS_TUI_HELP01_TITLE" xml:space="preserve">
+    <value>मॉड मैनेज करना</value>
+  </data>
+  <data name="NKS_MODS_TUI_HELP01_DESC" xml:space="preserve">
+    <value>मॉड मैनेजमेंट के लिए इंटरैक्टिव TUI</value>
+  </data>
+  <data name="NKS_MODS_TUI_HELP01_BODY" xml:space="preserve">
+    <value>आप इस इंटरैक्टिव TUI का इस्तेमाल करके अपने इंस्टॉल किए गए कर्नेल मॉड को आसानी से मैनेज कर सकते हैं। आप देख सकते हैं कि आपके कर्नेल पर कौन से मॉड चल रहे हैं, साथ ही मॉड को शुरू और बंद भी कर सकते हैं।</value>
+  </data>
+  <data name="NKS_MODS_MANTUI_HELP01_TITLE" xml:space="preserve">
+    <value>मैन्युअल पेज देखना</value>
+  </data>
+  <data name="NKS_MODS_MANTUI_HELP01_DESC" xml:space="preserve">
+    <value>मैन्युअल पेज देखने के लिए इंटरैक्टिव TUI</value>
+  </data>
+  <data name="NKS_MODS_MANTUI_HELP01_BODY" xml:space="preserve">
+    <value>मैन्युअल पेज आपके मॉड के साथ आ सकते हैं, अगर वे आपको और मदद देते हैं, तो सब एक ही जगह पर। आप इस इंटरैक्टिव TUI का इस्तेमाल करके मैनुअल पेज को ज़्यादा इंटरैक्टिव तरीके से देख सकते हैं।</value>
+  </data>
 
 </root>
