--- a/public/Nitrocid.Addons.Essentials/Nitrocid.Extras.Mods/Resources/Languages/Output/Localizations.ko.resx
+++ b/public/Nitrocid.Addons.Essentials/Nitrocid.Extras.Mods/Resources/Languages/Output/Localizations.ko.resx
@@ -405,5 +405,23 @@
   <data name="NKS_MODS_SETTINGS_DESC" xml:space="preserve">
     <value>이 섹션에서는 커널 수정 시스템의 작동 방식을 구성할 수 있습니다.</value>
   </data>
+  <data name="NKS_MODS_TUI_HELP01_TITLE" xml:space="preserve">
+    <value>모드 관리</value>
+  </data>
+  <data name="NKS_MODS_TUI_HELP01_DESC" xml:space="preserve">
+    <value>모드 관리를 위한 대화형 TUI</value>
+  </data>
+  <data name="NKS_MODS_TUI_HELP01_BODY" xml:space="preserve">
+    <value>이 대화형 TUI를 사용하여 설치된 커널 모드를 쉽게 관리할 수 있습니다. 커널에서 실행 중인 모드를 확인하고 모드를 시작 및 중지할 수 있습니다.</value>
+  </data>
+  <data name="NKS_MODS_MANTUI_HELP01_TITLE" xml:space="preserve">
+    <value>매뉴얼 페이지 보기</value>
+  </data>
+  <data name="NKS_MODS_MANTUI_HELP01_DESC" xml:space="preserve">
+    <value>매뉴얼 페이지 뷰어를 위한 대화형 TUI</value>
+  </data>
+  <data name="NKS_MODS_MANTUI_HELP01_BODY" xml:space="preserve">
+    <value>추가적인 도움이 필요한 경우, 매뉴얼 페이지가 모드와 함께 제공될 수 있으며, 모든 기능을 한 곳에서 확인할 수 있습니다. 이 대화형 TUI를 사용하면 매뉴얼 페이지를 더욱 대화형으로 볼 수 있습니다.</value>
+  </data>
 
 </root>
