--- a/public/Nitrocid.Addons.Essentials/Nitrocid.Extras.Mods/Resources/Languages/Output/Localizations.uk.resx
+++ b/public/Nitrocid.Addons.Essentials/Nitrocid.Extras.Mods/Resources/Languages/Output/Localizations.uk.resx
@@ -405,5 +405,23 @@
   <data name="NKS_MODS_SETTINGS_DESC" xml:space="preserve">
     <value>У цьому розділі можна налаштувати, як працює система модифікації ядра.</value>
   </data>
+  <data name="NKS_MODS_TUI_HELP01_TITLE" xml:space="preserve">
+    <value>Керування модами</value>
+  </data>
+  <data name="NKS_MODS_TUI_HELP01_DESC" xml:space="preserve">
+    <value>Інтерактивний TUI для керування модами</value>
+  </data>
+  <data name="NKS_MODS_TUI_HELP01_BODY" xml:space="preserve">
+    <value>Ви можете легко керувати встановленими модами ядра за допомогою цього інтерактивного TUI. Ви можете бачити, які моди працюють на вашому ядрі, а також запускати та зупиняти моди.</value>
+  </data>
+  <data name="NKS_MODS_MANTUI_HELP01_TITLE" xml:space="preserve">
+    <value>Перегляд сторінок посібника</value>
+  </data>
+  <data name="NKS_MODS_MANTUI_HELP01_DESC" xml:space="preserve">
+    <value>Інтерактивний TUI для перегляду сторінок посібника</value>
+  </data>
+  <data name="NKS_MODS_MANTUI_HELP01_BODY" xml:space="preserve">
+    <value>Сторінки посібника можуть постачатися разом з вашими модами, якщо вони надають вам додаткову допомогу, все в одному місці. Ви можете використовувати цей інтерактивний TUI для більш інтерактивного перегляду сторінок посібника.</value>
+  </data>
 
 </root>
