--- a/public/Nitrocid.Addons.Essentials/Nitrocid.Extras.Mods/Resources/Languages/ger.json
+++ b/public/Nitrocid.Addons.Essentials/Nitrocid.Extras.Mods/Resources/Languages/ger.json
@@ -398,6 +398,30 @@
     {
       "loc": "NKS_MODS_SETTINGS_DESC",
       "text": "In diesem Abschnitt können Sie die Funktionsweise des Kernel-Änderungssystems konfigurieren."
+    },
+    {
+      "loc": "NKS_MODS_TUI_HELP01_TITLE",
+      "text": "Mod-Verwaltung"
+    },
+    {
+      "loc": "NKS_MODS_TUI_HELP01_DESC",
+      "text": "Interaktive Benutzeroberfläche für die Mod-Verwaltung"
+    },
+    {
+      "loc": "NKS_MODS_TUI_HELP01_BODY",
+      "text": "Mit dieser interaktiven Benutzeroberfläche können Sie Ihre installierten Kernel-Mods ganz einfach verwalten. Sie sehen, welche Mods auf Ihrem Kernel ausgeführt werden, und können diese starten und stoppen."
+    },
+    {
+      "loc": "NKS_MODS_MANTUI_HELP01_TITLE",
+      "text": "Anzeigen von Handbuchseiten"
+    },
+    {
+      "loc": "NKS_MODS_MANTUI_HELP01_DESC",
+      "text": "Interaktive Benutzeroberfläche zum Anzeigen von Handbuchseiten"
+    },
+    {
+      "loc": "NKS_MODS_MANTUI_HELP01_BODY",
+      "text": "Handbuchseiten sind möglicherweise in Ihren Mods enthalten und bieten Ihnen zusätzliche Hilfestellungen an einem Ort. Mit dieser interaktiven Benutzeroberfläche können Sie die Handbuchseiten interaktiver anzeigen."
     }
   ]
 }
