--- a/public/Nitrocid.Addons.Essentials/Nitrocid.Extras.Mods/Resources/Languages/ind.json
+++ b/public/Nitrocid.Addons.Essentials/Nitrocid.Extras.Mods/Resources/Languages/ind.json
@@ -389,6 +389,30 @@
     {
       "loc": "NKS_MODS_SETTINGS_DESC",
       "text": "yah anubhaag aapako konfigar karane deta hai ki karnel sanshodhan pranaalee kaise kaam karatee hai."
+    },
+    {
+      "loc": "NKS_MODS_TUI_HELP01_TITLE",
+      "text": "mod mainej karana"
+    },
+    {
+      "loc": "NKS_MODS_TUI_HELP01_DESC",
+      "text": "mod mainejament ke lie intaraiktiv tui"
+    },
+    {
+      "loc": "NKS_MODS_TUI_HELP01_BODY",
+      "text": "aap is intaraiktiv tui ka istemaal karake apane instol kie gae karnel mod ko aasaanee se mainej kar sakate hain. aap dekh sakate hain ki aapake karnel par kaun se mod chal rahe hain, saath hee mod ko shuroo aur band bhee kar sakate hain."
+    },
+    {
+      "loc": "NKS_MODS_MANTUI_HELP01_TITLE",
+      "text": "mainyual pej dekhana"
+    },
+    {
+      "loc": "NKS_MODS_MANTUI_HELP01_DESC",
+      "text": "mainyual pej dekhane ke lie intaraiktiv tui"
+    },
+    {
+      "loc": "NKS_MODS_MANTUI_HELP01_BODY",
+      "text": "mainyual pej aapake mod ke saath aa sakate hain, agar ve aapako aur madad dete hain, to sab ek hee jagah par. aap is intaraiktiv tui ka istemaal karake mainual pej ko zyaada intaraiktiv tareeke se dekh sakate hain."
     }
   ]
 }
