--- a/public/Nitrocid.Addons.Essentials/Nitrocid.Extras.Mods/Resources/Languages/iri.json
+++ b/public/Nitrocid.Addons.Essentials/Nitrocid.Extras.Mods/Resources/Languages/iri.json
@@ -390,6 +390,30 @@
     {
       "loc": "NKS_MODS_SETTINGS_DESC",
       "text": "Ligeann an chuid seo duit conas a oibríonn an córas modhnuithe eithne a chumrú."
+    },
+    {
+      "loc": "NKS_MODS_TUI_HELP01_TITLE",
+      "text": "Bainistiú modhanna"
+    },
+    {
+      "loc": "NKS_MODS_TUI_HELP01_DESC",
+      "text": "TUI idirghníomhach le haghaidh bainistíocht modhanna"
+    },
+    {
+      "loc": "NKS_MODS_TUI_HELP01_BODY",
+      "text": "Is féidir leat do mhodhanna eithne suiteáilte a bhainistiú go héasca trí úsáid a bhaint as an TUI idirghníomhach seo. Is féidir leat a fheiceáil cé na modhanna atá ag rith ar do eithne, chomh maith le modhanna a thosú agus a stopadh."
+    },
+    {
+      "loc": "NKS_MODS_MANTUI_HELP01_TITLE",
+      "text": "Ag féachaint ar leathanaigh láimhe"
+    },
+    {
+      "loc": "NKS_MODS_MANTUI_HELP01_DESC",
+      "text": "TUI idirghníomhach don amharcóir leathanaigh láimhe"
+    },
+    {
+      "loc": "NKS_MODS_MANTUI_HELP01_BODY",
+      "text": "Féadfaidh leathanaigh láimhe teacht le do mhodhanna, ar eagla go dtugann siad cabhair bhreise duit, ar fad in aon áit amháin. Is féidir leat an TUI idirghníomhach seo a úsáid chun na leathanaigh láimhe a fheiceáil ar bhealach níos idirghníomhaí."
     }
   ]
 }
