--- a/public/Nitrocid.Addons.Essentials/Nitrocid.Extras.Mods/Resources/Languages/mal.json
+++ b/public/Nitrocid.Addons.Essentials/Nitrocid.Extras.Mods/Resources/Languages/mal.json
@@ -392,6 +392,30 @@
     {
       "loc": "NKS_MODS_SETTINGS_DESC",
       "text": "Bahagian ini membolehkan anda mengkonfigurasi cara sistem pengubahsuaian kernel berfungsi."
+    },
+    {
+      "loc": "NKS_MODS_TUI_HELP01_TITLE",
+      "text": "Mengurus mod"
+    },
+    {
+      "loc": "NKS_MODS_TUI_HELP01_DESC",
+      "text": "TUI interaktif untuk pengurusan mod"
+    },
+    {
+      "loc": "NKS_MODS_TUI_HELP01_BODY",
+      "text": "Anda boleh mengurus mod kernel yang dipasang dengan mudah dengan menggunakan TUI interaktif ini. Anda boleh melihat mod yang berjalan pada kernel anda, serta memulakan dan menghentikan mod."
+    },
+    {
+      "loc": "NKS_MODS_MANTUI_HELP01_TITLE",
+      "text": "Melihat halaman manual"
+    },
+    {
+      "loc": "NKS_MODS_MANTUI_HELP01_DESC",
+      "text": "TUI interaktif untuk pemapar halaman manual"
+    },
+    {
+      "loc": "NKS_MODS_MANTUI_HELP01_BODY",
+      "text": "Halaman manual mungkin disertakan dengan mod anda, sekiranya ia memberi anda bantuan tambahan, semuanya di satu tempat. Anda boleh menggunakan TUI interaktif ini untuk melihat halaman manual secara lebih interaktif."
     }
   ]
 }
