--- a/public/Nitrocid.Addons.Essentials/Nitrocid.Extras.Mods/Resources/Languages/ptg.json
+++ b/public/Nitrocid.Addons.Essentials/Nitrocid.Extras.Mods/Resources/Languages/ptg.json
@@ -399,6 +399,30 @@
     {
       "loc": "NKS_MODS_SETTINGS_DESC",
       "text": "Esta secção permite configurar o funcionamento do sistema de modificação do kernel."
+    },
+    {
+      "loc": "NKS_MODS_TUI_HELP01_TITLE",
+      "text": "Gerir mods"
+    },
+    {
+      "loc": "NKS_MODS_TUI_HELP01_DESC",
+      "text": "Interface de utilizador interativa para gestão de mods"
+    },
+    {
+      "loc": "NKS_MODS_TUI_HELP01_BODY",
+      "text": "Pode gerir facilmente os mods do kernel instalados utilizando esta interface de utilizador interativa. Pode ver quais os mods que estão a ser executados no seu kernel, bem como iniciar e parar mods."
+    },
+    {
+      "loc": "NKS_MODS_MANTUI_HELP01_TITLE",
+      "text": "Visualização de páginas de manual"
+    },
+    {
+      "loc": "NKS_MODS_MANTUI_HELP01_DESC",
+      "text": "Interface de utilizador interativo para visualização de páginas de manual"
+    },
+    {
+      "loc": "NKS_MODS_MANTUI_HELP01_BODY",
+      "text": "As páginas de manual podem vir incluídas com os seus mods, caso forneçam ajuda adicional, tudo num só local. Pode utilizar esta interface de utilizador interativa para visualizar as páginas de manual de forma mais interativa."
     }
   ]
 }
