--- a/public/Nitrocid.Addons.Essentials/Nitrocid.Extras.Mods/Resources/Languages/rmn.json
+++ b/public/Nitrocid.Addons.Essentials/Nitrocid.Extras.Mods/Resources/Languages/rmn.json
@@ -390,6 +390,30 @@
     {
       "loc": "NKS_MODS_SETTINGS_DESC",
       "text": "Această secțiune vă permite să configurați modul în care funcționează sistemul de modificare a nucleului."
+    },
+    {
+      "loc": "NKS_MODS_TUI_HELP01_TITLE",
+      "text": "Gestionarea modurilor"
+    },
+    {
+      "loc": "NKS_MODS_TUI_HELP01_DESC",
+      "text": "Interfață interactivă pentru gestionarea modurilor"
+    },
+    {
+      "loc": "NKS_MODS_TUI_HELP01_BODY",
+      "text": "Puteți gestiona cu ușurință modurile de kernel instalate utilizând această interfață interactivă. Puteți vedea ce moduri rulează pe kernel, precum și pornirea și oprirea modurilor."
+    },
+    {
+      "loc": "NKS_MODS_MANTUI_HELP01_TITLE",
+      "text": "Vizualizarea paginilor de manual"
+    },
+    {
+      "loc": "NKS_MODS_MANTUI_HELP01_DESC",
+      "text": "Interfață interactivă pentru vizualizatorul de pagini de manual"
+    },
+    {
+      "loc": "NKS_MODS_MANTUI_HELP01_BODY",
+      "text": "Paginile de manual pot fi incluse în pachetul modurilor, în cazul în care acestea vă oferă ajutor suplimentar, toate într-un singur loc. Puteți utiliza această interfață interactivă pentru a vizualiza paginile de manual într-un mod mai interactiv."
     }
   ]
 }
